--- a/app/src/main/res/layout/add_produce_dialog.xml
+++ b/app/src/main/res/layout/add_produce_dialog.xml
@@ -335,7 +335,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
                 android:layout_marginTop="10dp"
-                android:visibility="visible">
+                android:visibility="gone">
 
 
 
