--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -45,16 +45,12 @@
             android:layout_margin="15dp"
             android:paddingBottom="10dp">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="5dp">
+                    android:layout_weight="1">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -81,8 +77,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginStart="5dp">
+                    android:layout_weight="1">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -102,18 +97,13 @@
                         android:layout_marginBottom="10dp"
                         android:drawableEnd="@drawable/ic_add_circle"/>
                 </LinearLayout>
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal">
+
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="5dp">
+                    android:layout_weight="1">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -139,8 +129,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginStart="5dp">
+                    android:layout_weight="1">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -183,9 +172,83 @@
                             android:visibility="gone"/>
                     </LinearLayout>
                 </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginBottom="10dp">
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_weight="1">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/josefin_sans"
+                    android:layout_marginBottom="5dp"
+                    android:text="Measurement"
+                    android:textColor="@color/textColorSecondaryLight"
+                    android:textSize="16sp" />
+
+
+
+                <EditText
+                    android:id="@+id/etxt_product_measurement"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:fontFamily="@font/josefin_sans"
+                    android:inputType="number"
+                    android:padding="10dp"/>
+
             </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:orientation="vertical"
+                android:layout_marginStart="10dp">
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="4dp"
+                    android:text="Units"
+                    android:textSize="16sp" />
 
 
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:background="@drawable/edittext_corner"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:padding="3.4dp">
+
+                    <Spinner
+                        android:id="@+id/product_units"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center"
+                        android:background="@android:color/transparent"
+                        android:entries="@array/crop_quantity_unit"
+                        android:gravity="center"
+                        android:spinnerMode="dropdown" />
+
+                    <ImageView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentEnd="true"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="center"
+                        android:layout_marginEnd="8dp"
+                        android:layout_marginRight="10dp"
+                        app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
+                        tools:ignore="VectorDrawableCompat" />
+                </RelativeLayout>
+            </LinearLayout>
+        </LinearLayout>
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -194,54 +257,56 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1"
                     android:orientation="vertical"
-                    android:layout_marginEnd="5dp">
+                    android:layout_weight="1">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
-                        android:text="Units"
+                        android:fontFamily="@font/josefin_sans"
+                        android:layout_marginBottom="5dp"
+                        android:text="Purchase Price"
+                        android:textColor="@color/textColorSecondaryLight"
                         android:textSize="16sp" />
-
-
-                    <RelativeLayout
+                    <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edittext_corner"
-                        android:gravity="center"
-                        android:orientation="horizontal"
-                        android:padding="3.4dp">
+                        android:orientation="horizontal">
 
-                        <Spinner
-                            android:id="@+id/product_units"
-                            android:layout_width="match_parent"
+                        <TextView
+                            android:layout_width="0dp"
                             android:layout_height="match_parent"
-                            android:layout_gravity="center"
-                            android:background="@android:color/transparent"
-                            android:entries="@array/crop_quantity_unit"
+                            android:layout_weight=".4"
+                            android:background="@drawable/edittext_left_corners_green"
+                            android:fontFamily="@font/josefin_sans"
                             android:gravity="center"
-                            android:spinnerMode="dropdown" />
+                            android:padding="10dp"
+                            android:text="UGX"
+                            android:textColor="#ffffff"
+                            android:textStyle="bold" />
 
-                        <ImageView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentEnd="true"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:layout_gravity="center"
-                            android:layout_marginEnd="8dp"
-                            android:layout_marginRight="10dp"
-                            app:srcCompat="@drawable/ic_baseline_arrow_drop_down_24"
-                            tools:ignore="VectorDrawableCompat" />
-                    </RelativeLayout>
+                        <EditText
+                            android:id="@+id/etxt_buy_price"
+                            android:layout_width="0dp"
+                            android:layout_height="match_parent"
+                            android:layout_weight=".6"
+                            android:background="@color/transparent"
+                            android:fontFamily="@font/josefin_sans"
+                            android:inputType="text"
+                            android:padding="8dp" />
+
+
+                    </LinearLayout>
+
+
+
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:layout_weight="1"
-                    android:layout_marginStart="5dp">
+                    android:layout_marginStart="10dp">
                     <TextView
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
@@ -255,8 +320,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="45dp"
                         android:background="@drawable/edittext_corner"
-                        android:orientation="horizontal"
-                        android:weightSum="10">
+                        android:orientation="horizontal">
 
                         <TextView
                             android:layout_width="0dp"
@@ -279,18 +343,7 @@
                             android:fontFamily="@font/josefin_sans"
                             android:inputType="text"
                             android:padding="8dp" />
-                        <TextView
-                            android:id="@+id/txt_selling_units"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="3"
-                            android:background="@drawable/edittext_right_corners_green"
-                            android:fontFamily="@font/josefin_sans"
-                            android:gravity="center"
-                            android:text="/unit"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold"
-                            android:textAllCaps="false"/>
+
 
                     </LinearLayout>
 
@@ -301,66 +354,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    android:layout_weight="1"
-                    android:layout_marginEnd="5dp">
-                    <TextView
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:fontFamily="@font/josefin_sans"
-                        android:layout_marginBottom="5dp"
-                        android:text="Purchase Price"
-                        android:textColor="@color/textColorSecondaryLight"
-                        android:textSize="16sp" />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="45dp"
-                        android:background="@drawable/edittext_corner"
-                        android:orientation="horizontal"
-                        android:weightSum="10">
 
-                        <TextView
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="3"
-                            android:background="@drawable/edittext_left_corners_green"
-                            android:fontFamily="@font/josefin_sans"
-                            android:gravity="center"
-                            android:padding="10dp"
-                            android:text="UGX"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold" />
-
-                        <EditText
-                            android:id="@+id/etxt_buy_price"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="4"
-                            android:background="@color/transparent"
-                            android:fontFamily="@font/josefin_sans"
-                            android:inputType="text"
-                            android:padding="8dp" />
-                        <TextView
-                            android:id="@+id/txt_purchase_units"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="3"
-                            android:background="@drawable/edittext_right_corners_green"
-                            android:fontFamily="@font/josefin_sans"
-                            android:gravity="center"
-                            android:text="/unit"
-                            android:textColor="#ffffff"
-                            android:textStyle="bold"
-                            android:textAllCaps="false"/>
-
-                    </LinearLayout>
-
-
-
-                </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -391,11 +385,24 @@
 
                 </LinearLayout>
             </LinearLayout>
+               <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_marginStart="5dp">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Product Image"
+                        android:textColor="@color/textColorSecondaryLight"
+                        android:textSize="16sp"
+                        android:layout_marginBottom="5dp"/>
+
            <androidx.cardview.widget.CardView
                 android:id="@+id/image_view_holder"
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
-                android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
                 android:visibility="visible"
                 app:cardCornerRadius="@dimen/dimen_5dp">
@@ -412,7 +419,7 @@
 
 
            </androidx.cardview.widget.CardView>
-
+               </LinearLayout>
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
