Changes made in pos

--- a/app/src/main/res/drawable-hdpi/ic_check.xml
+++ b/app/src/main/res/drawable-hdpi/ic_check.xml
@@ -8,5 +8,5 @@
       android:fillColor="#3bb54a"/>
   <path
       android:pathData="M20.05,9.347l-9.164,9.164 -5.132,-5.095 2.089,-2.053 3.042,3.006 7.074,-7.074Z"
-      android:fillColor="#d4e1f4"/>
+      android:fillColor="#fff"/>
 </vector>
