--- a/app/src/main/res/layout/fragment_shop_pos.xml
+++ b/app/src/main/res/layout/fragment_shop_pos.xml
@@ -92,16 +92,20 @@
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 
-    <EditText
-        android:id="@+id/pos_charge"
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
         android:layout_marginEnd="14dp"
         android:layout_marginTop="25dp"
-        android:layout_marginBottom="60dp"
+        android:layout_marginBottom="60dp">
+
+
+    <EditText
+        android:id="@+id/pos_charge"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:background="@drawable/round_border"
-        android:drawableEnd="@drawable/ic_check"
         android:ems="10"
         android:fontFamily="@font/josefin_sans"
         android:hint="Charge UGX 0"
@@ -112,7 +116,14 @@
         android:visibility="visible"
         android:focusable="true"
         android:focusedByDefault="true"/>
-
+        <ImageView
+            android:id="@+id/img_check"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_check"
+            android:layout_gravity="end|center"
+            android:paddingEnd="10dp"/>
+    </FrameLayout>
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -218,14 +229,18 @@
         android:id="@+id/recycler"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="?actionBarSize"
         android:background="?android:attr/selectableItemBackground"
         android:visibility="gone"/>
 
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginBottom="?actionBarSize">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -252,7 +267,8 @@
                     android:text="@string/no_product_found"
                     android:textColor="@color/colorPrimary"
                     android:textSize="24sp"
-                    app:fontFamily="@font/josefin_sans" />
+                    app:fontFamily="@font/josefin_sans"
+                    android:visibility="gone"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
