Updated changes made in pos

--- a/app/src/main/res/layout/fragment_shop_pos.xml
+++ b/app/src/main/res/layout/fragment_shop_pos.xml
@@ -93,6 +93,7 @@
 
 
     <FrameLayout
+        android:id="@+id/layout_pos_charge"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="14dp"
