--- a/app/src/main/res/layout/wallet_transaction_card.xml
+++ b/app/src/main/res/layout/wallet_transaction_card.xml
@@ -75,12 +75,28 @@
                 tools:text="25 December 2020, 12:14"
                 android:textColor="@color/hintColor"
                 android:textSize="12sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@id/beneficiary_number"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/guideline5"
                 app:layout_constraintVertical_bias="0.2" />
+            <TextView
+                android:id="@+id/beneficiary_number"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="1"
+                tools:text="12345678912345"
+                android:textColor="@color/hintColor"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/date"
+                app:layout_constraintVertical_bias="0.2"
+                android:visibility="gone"/>
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline5"
@@ -99,7 +115,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/guideline8"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="visible">
 
             <TextView
                 android:id="@+id/amount"
@@ -132,6 +149,18 @@
                 app:layout_constraintGuide_percent="0.6" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <ImageView
+            android:id="@+id/img_beneficiary_close"
+            android:layout_width="wrap_content"
+            android:layout_height="20dp"
+            android:layout_weight=".9"
+            android:layout_gravity="end"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/close"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:visibility="gone"/>
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/guideline2"
